--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,7 @@
 @import "~bootstrap/scss/bootstrap";
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Rubik'
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
