--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -8,6 +8,14 @@
     flex-direction: row;
     align-items: center;
 }
+.display-column {
+	display: flex;
+	flex-direction: column;
+}
+.flex-centered {
+	align-items: center;
+	justify-content: center;
+}
 .landing-image {
 	width: 500px;
 	height: 350px;
