--- a/src/components/addEvent/addEvent.scss
+++ b/src/components/addEvent/addEvent.scss
@@ -51,3 +51,7 @@ cursor: default;
 input[type=radio].toggle:checked + label:after {
     left: 0;
 }
+
+.main-input::placeholder {
+    color: black;
+}
