--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,3 +1,7 @@
+@import '../../variables.scss';
+
 header {
-    justify-content: space-between;
+    height: 10vh;
+    background-color: $secondary-light;
+    border-radius: 20px;
 }
