--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,4 +1,4 @@
-$primary: #22C55E;
-$secondary: #4B9B62;
-$error: red;
-$success: green;
+$primary: #4B9B62;
+$primary-light: #22C55E;
+$secondary: #292633;
+$secondary-light: #34313F;
