--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,7 +1,2 @@
-@import '../../variables.scss';
+@import "../../variables.scss";
 
-header {
-    height: 10vh;
-    background-color: $secondary-light;
-    border-radius: 20px;
-}
