--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,3 +2,7 @@ $primary: #4B9B62;
 $primary-light: #22C55E;
 $secondary: #292633;
 $secondary-light: #34313F;
+$success: #28a745;
+$info: #17a2b8;
+$warning: #ffc107;
+$danger: #dc3545;
