--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -28,8 +28,8 @@ $border-color: #34313F;
 
 //Text colors
 $text-muted: #a5b1c4;
-$link-color: #007bff;
-$link-hover-color: #0056b3;
+$link-color: white;
+$link-hover-color: $primary-light;
 $form-text-color: white;
 $input-color: white;
 $input-placeholder-color: white;
@@ -42,6 +42,15 @@ $form-check-input-checked-bg-color: $primary-light;
 $form-check-input-border: $primary-light;
 $input-focus-color: white;
 
+//Tabs
+//$nav-tabs-border-width
+//$nav-tabs-border-radius
+$nav-tabs-link-active-border-color: $primary-light;
+$nav-tabs-border-color: $primary-light;
+$nav-tabs-link-hover-border-color: $primary-light;
+$nav-tabs-link-active-color: $primary-light;
+$nav-tabs-link-active-bg: $secondary;
+
 // Re-import Bootstrap to apply custom variables
 @import "~bootstrap/scss/bootstrap";
 @import '../../variables.scss';
@@ -49,7 +58,7 @@ $input-focus-color: white;
 body {
   background-color: #292633
 }
-h1, h2, h3, h4, h5, h6, button, span, div, p, a, b, small{
+h1, h2, h3, h4, h5, h6, button, span, div, a, p, b, small{
   color: white !important;
 }
 a {
