--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -58,7 +58,7 @@ $nav-tabs-link-active-bg: $secondary;
 body {
   background-color: #292633
 }
-h1, h2, h3, h4, h5, h6, button, span, div, a, p, b, small{
+h1, h2, h3, h4, h5, h6, button, span, div, a, p, b, small, label{
   color: white !important;
 }
 a {
@@ -72,6 +72,9 @@ code {
 }
 .padding-20px {
   padding: 20px;
+}
+.margin-b-10px {
+  margin-bottom: 10px;
 }
 .margin-padding-0 {
   margin: 0;
