--- a/src/components/event/Event.scss
+++ b/src/components/event/Event.scss
@@ -1,12 +1,20 @@
+@import '../../variables.scss';
 
-
-.eventDesc {
-    width: 100%;
-    margin: 15px;
-    padding: 10px;
+.event-banner {
+    background-image: url("../../img/44.jpg");
+    background-size: cover;
 }
-.eventRegForm {
-    width: 400px;
-    height: auto;
-    padding: 10px;
+.event-block {
+    background-color: $secondary;
+    border-radius: 1em;
+    padding: 10px 10px 10px 15px;
+}
+.carousel-item {
+    height: 600px;
+}
+
+.carousel-item img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
 }
