--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -151,3 +151,15 @@ code {
 .navdrop-item:hover {
   background-color: $primary-light
 }
+.avatar-20rem {
+  width: 20rem;
+  height: 20rem;
+}
+.avatar-15rem {
+  width: 15rem;
+  height: 15rem;
+}
+.avatar-5rem {
+  width: 5rem;
+  height: 5rem;
+}
