--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -64,7 +64,7 @@ $nav-tabs-link-active-bg: $secondary;
 
 //Baseeee
 body {
-  background-color: #292633
+  background-color: #292633;
 }
 h1, h2, h3, h4, h5, h6, button, span, div, a, p, b, small, label{
   color: white !important;
@@ -103,6 +103,9 @@ code {
 }
 .h-20rem {
   height: 20rem;
+}
+.h-15rem {
+  height: 15rem;
 }
 .h-10rem {
   height: 10rem;
@@ -144,6 +147,13 @@ code {
 }
 
 //Other
+main {
+  min-height: 76vh;
+}
+.loading {
+  width: 100%;
+  height: 100%;
+}
 .btn {
   color: white;
   font-weight: 600;
