--- a/src/components/teams/Teams.scss
+++ b/src/components/teams/Teams.scss
@@ -1,11 +1,17 @@
 @import '../../variables.scss';
 
-.team-banner-img {
-  background-image: url('../../img/airsoft-team.jpg');
+.team-banner-column {
   border: 4px solid $primary-light;
   border-right: none;
   border-top-left-radius: 1rem;
   border-bottom-left-radius: 1rem;
+  height: 100%;
+  overflow: hidden;
+}
+.team-banner-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .team-banner-info {
   border: 4px solid $primary-light;
