--- a/src/components/app/App.scss
+++ b/src/components/app/App.scss
@@ -193,3 +193,14 @@ main {
     width: 120px;
     height: 120px;
 }
+.user-post-card {
+  width: 100%;
+  height: 200px;
+  padding: 10px;
+  border-radius: 10px;
+  border: 2px solid $primary-light;
+  margin-top: 10px;
+  img {
+    object-fit: contain;
+  }
+}
